--- a/modules/apps/events-calendar/events-calendar/src/main/resources/META-INF/resources/configuration/display_settings.jspf
+++ b/modules/apps/events-calendar/events-calendar/src/main/resources/META-INF/resources/configuration/display_settings.jspf
@@ -13,6 +13,9 @@
  * details.
  */
 --%>
+<%
+boolean displaySchedulerHeader = GetterUtil.getBoolean(portletPreferences.getValue("displaySchedulerHeader", null), true);
+%>
 
 <aui:fieldset>
 	<aui:input label="display-scheduler-only" name="displaySchedulerOnly" type="checkbox" value="<%= displaySchedulerOnly %>" />
