--- a/modules/apps/foundation/portal-search/portal-search-web/src/main/resources/META-INF/resources/display_settings.jspf
+++ b/modules/apps/foundation/portal-search/portal-search-web/src/main/resources/META-INF/resources/display_settings.jspf
@@ -16,7 +16,7 @@
 
 <aui:select label="scope" name="preferences--searchScope--" value="<%= searchDisplayContext.getSearchScopePreferenceString() %>">
 	<aui:option label="this-site" value="" />
-	<aui:option label="everything" />
+	<aui:option label="all-sites" value="everything" />
 	<aui:option label="let-the-user-choose" />
 </aui:select>
 
